Fixed home background image size Fix to fix background position on mobile

--- a/style.css
+++ b/style.css
@@ -56,6 +56,21 @@ a:hover {
     background-color: black;
 }
 
+body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .module-background {
     background: url(images/home-bg.jpg) no-repeat center center fixed;
     background-size: cover;
